<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotation="0"
    android:rotationY="0">

    <ImageView
        android:id="@+id/main_menu89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_room_update" />

    <ImageView
        android:id="@+id/black_menu89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/main_menu89"
        app:layout_constraintTop_toTopOf="@+id/main_menu89"
        app:srcCompat="@drawable/new_black" />

    <ImageView
        android:id="@+id/bAuthor89"
        android:layout_width="51dp"
        android:layout_height="81dp"
        android:layout_marginStart="278dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="406dp"
        android:layout_marginBottom="139dp"
        android:src="@drawable/binvisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <ImageView
        android:id="@+id/bPicture89"
        android:layout_width="35dp"
        android:layout_height="117dp"
        android:src="@drawable/binvisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bAuthor89"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toEndOf="@id/bAuthor89"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <ImageView
        android:id="@+id/old_clock89"
        android:layout_width="62dp"
        android:layout_height="201dp"
        app:layout_constraintBottom_toBottomOf="@id/main_menu89"
        app:layout_constraintEnd_toEndOf="@id/main_menu89"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@id/main_menu89"
        app:layout_constraintTop_toTopOf="@id/main_menu89"
        app:layout_constraintVertical_bias="0.719"
        app:srcCompat="@drawable/old_clock" />

    <TextView
        android:id="@+id/ua_89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font2"
        android:text="@string/ua"
        android:textColor="@color/lang_unselected"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <TextView
        android:id="@+id/en_89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font2"
        android:text="@string/en"
        android:textColor="@color/lang_unselected"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <TextView
        android:id="@+id/ru_89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font2"
        android:text="@string/ru"
        android:textColor="@color/lang_unselected"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <ImageView
        android:id="@+id/buttonPlay89"
        android:layout_width="73dp"
        android:layout_height="61dp"
        android:layout_marginBottom="244dp"
        android:src="@drawable/pl1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/main_menu89" />

    <TextView
        android:id="@+id/language89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font2"
        android:text="@string/language"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <ImageView
        android:id="@+id/img_1889"
        android:layout_width="98dp"
        android:layout_height="30dp"
        android:src="@drawable/_889"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="@+id/main_menu89"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <ImageView
        android:id="@+id/next_year_1889"
        android:layout_width="19dp"
        android:layout_height="18dp"
        android:layout_marginEnd="81dp"
        android:rotationX="0"
        android:rotationY="0"
        android:src="@drawable/next_year_button2"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlay89"
        app:layout_constraintEnd_toEndOf="@+id/img_1889"
        app:layout_constraintTop_toTopOf="@+id/img_1889"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/hint_1889"
        android:layout_width="144dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/font2"
        android:text="@string/hint_1889"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/img_1889"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="@+id/img_1889"
        app:layout_constraintTop_toBottomOf="@+id/img_1889" />


</androidx.constraintlayout.widget.ConstraintLayout>