<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MenuActivityIGNORE">

    <ImageView
        android:id="@+id/room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/roommain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mBlack"
        app:layout_constraintTop_toTopOf="@+id/mBlack" />

    <ImageView
        android:id="@+id/mBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/backinblack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonst"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bAuthor"
            android:layout_width="51dp"
            android:layout_height="81dp"
            android:layout_marginStart="278dp"
            android:layout_marginTop="222dp"
            android:layout_marginEnd="406dp"
            android:layout_marginBottom="139dp"
            android:src="@drawable/binvisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.612" />

        <ImageView
            android:id="@+id/bPicture"
            android:layout_width="35dp"
            android:layout_height="117dp"
            android:src="@drawable/binvisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bAuthor"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toEndOf="@+id/bAuthor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.636" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font2"
            android:text="@string/language"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.731"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.135" />

        <TextView
            android:id="@+id/ua_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font2"
            android:text="@string/ua"
            android:textColor="@color/lang_unselected"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.788"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.243" />

        <TextView
            android:id="@+id/ru_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font2"
            android:text="@string/ru"
            android:textColor="@color/lang_unselected"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.763"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.189" />

        <TextView
            android:id="@+id/en_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font2"
            android:text="@string/en"
            android:textColor="@color/lang_unselected"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.764"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.297" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controllers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/buttonPlay"
            android:layout_width="73dp"
            android:layout_height="61dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="141dp"
            android:src="@drawable/pl1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonRight"
            app:layout_constraintStart_toEndOf="@+id/buttonLeft" />

        <ImageView
            android:id="@+id/buttonRight"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginEnd="169dp"
            android:src="@drawable/bright"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonPlay"
            app:layout_constraintTop_toTopOf="@+id/buttonPlay" />

        <ImageView
            android:id="@+id/buttonLeft"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="167dp"
            android:layout_marginEnd="77dp"
            android:src="@drawable/bleft"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/buttonRight"
            app:layout_constraintEnd_toStartOf="@+id/buttonPlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonPlay" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>